--- a/templates/fsc/index.html
+++ b/templates/fsc/index.html
@@ -431,7 +431,7 @@
 
                <!-- Read More button linking to All Services page -->
                 <div class="text-center">
-                  <a href="{% url 'services' %}" class="read-more-all">View All Services</a>
+                  <a href="{% url 'services' %}" >View All Services</a>
               </div>
             </div>
           </div>
