--- a/staticfiles/assets/css/style.css
+++ b/staticfiles/assets/css/style.css
@@ -3212,7 +3212,7 @@ img {
   font-weight: 500;
   color: #0b5345;
 }
-.text-center{
+.text-center a{
   font-size: 15px;
   font-weight: 600;
   color: #d35400;
