--- a/templates/fsc/blog-single.html
+++ b/templates/fsc/blog-single.html
@@ -259,7 +259,7 @@
                                     <div class="post">
                                         <div class="img-holder">
                                             {% if post.image %}
-                                            <img src="{{ post.image.url }}" alt="{{ post.title }}">
+                                            <img src="{{ post.image.url }}" alt="{{ post.title }}" style="height: 50px; width: 50px;">
                                             {% else %}
                                             <img src="assets/images/default-post.jpg" alt="Default Image">
                                             {% endif %}
