--- a/templates/fsc/index.html
+++ b/templates/fsc/index.html
@@ -342,32 +342,32 @@
                 <div class="grid">
                   <img src="{% static 'assets/images/services/img-1.jpg' %}" alt />
                   <h4>
-                    <a href="RainwaterHarvesting.html">Rainwater Harvesting</a>
+                    <a href="{% url 'RainwaterHarvesting' %}">Rainwater Harvesting</a>
                   </h4>
                   <p>
                     Rainwater harvesting involves collecting and storing
                     rainwater for various uses
                   </p>
-                  <a href="RainwaterHarvesting.html" class="read-more"
+                  <a href="{% url 'RainwaterHarvesting' %}" class="read-more"
                     >Read More <i class="fi flaticon-next"></i
                   ></a>
                 </div>
                 <div class="grid">
                   <img src="{% static 'assets/images/services/img-2.jpg' %}" alt />
                   <h4>
-                    <a href="Agroforestry.html"
+                    <a href="{% url 'agroforestry' %}"
                       >Agroforestry and Silviculture</a
                     >
                   </h4>
                   <p>FSC Ltd specializes in agroforestry and silviculture</p>
-                  <a href="Agroforestry.html" class="read-more"
+                  <a href="{% url 'agroforestry' %}" class="read-more"
                     >Read More <i class="fi flaticon-next"></i
                   ></a>
                 </div>
                 <div class="grid">
                   <img src="{% static 'assets/images/services/img-3.jpg' %}" alt />
                   <h4>
-                    <a href="OrganicManureProduction.html"
+                    <a href="{% url 'OrganicManureProduction' %}"
                       >Organic Manure Production</a
                     >
                   </h4>
@@ -375,14 +375,14 @@
                     Organic manure production, leveraging its extensive
                     experience in agroforestry and sustainable land management
                   </p>
-                  <a href="OrganicManureProduction.html" class="read-more"
+                  <a href="{% url 'OrganicManureProduction' %}" class="read-more"
                     >Read More <i class="fi flaticon-next"></i
                   ></a>
                 </div>
                 <div class="grid">
                   <img src="{% static 'assets/images/services/img-4.jpg' %}" alt />
                   <h4>
-                    <a href="BiogasGeneration.html"
+                    <a href="{% url 'biogasGeneration' %}"
                       >Biogas Generation from Livestock Waste</a
                     >
                   </h4>
@@ -391,14 +391,14 @@
                     agriculture and environmental protection since 1998, now
                     offers innovative biogas
                   </p>
-                  <a href="BiogasGeneration.html" class="read-more"
+                  <a href="{% url 'biogasGeneration' %}" class="read-more"
                     >Read More <i class="fi flaticon-next"></i
                   ></a>
                 </div>
                 <div class="grid">
                   <img src="{% static 'assets/images/services/img-5.jpg' %}" alt />
                   <h4>
-                    <a href="WasteManagement.html"
+                    <a href="{% url 'WasteManagement' %}"
                       >Waste Management and Value Addition</a
                     >
                   </h4>
@@ -407,14 +407,14 @@
                     extensive experience in sustainable agriculture and
                     environmental protection, now offers comprehensive
                   </p>
-                  <a href="WasteManagement.html" class="read-more"
+                  <a href="{% url 'WasteManagement' %}" class="read-more"
                     >Read More <i class="fi flaticon-next"></i
                   ></a>
                 </div>
                 <div class="grid">
                   <img src="{% static 'assets/images/services/img-6.jpg' %}" alt />
                   <h4>
-                    <a href="RuralDevelopmentSolutions.html"
+                    <a href="{% url 'RuralDevelopmentSolutions' %}"
                       >Other Activities (Integrated Rural Development
                       Solutions)</a
                     >
@@ -423,7 +423,7 @@
                     These services encompass integrated rural development
                     solutions that complement FSC's core expertise in
                   </p>
-                  <a href="RuralDevelopmentSolutions.html" class="read-more"
+                  <a href="{% url 'RuralDevelopmentSolutions' %}" class="read-more"
                     >Read More <i class="fi flaticon-next"></i
                   ></a>
                 </div>
