--- a/templates/fsc/index.html
+++ b/templates/fsc/index.html
@@ -713,7 +713,7 @@
                                   <p>Tel: {{ member.telephone }}</p>
                               {% endif %}
                               {% if member.email %}
-                                  <p>Email: <a href="mailto:{{ member.email }}" style="color: #007bff;">{{ member.email }}</a></p>
+                                  <p>Email: <a href="mailto:{{ member.email }}" style="color: #0b5345;">{{ member.email }}</a></p>
                               {% endif %}
                         </div>
                     </div>
