--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -3629,6 +3629,9 @@ img {
 }
 
 .team-section .team-grids {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   margin: 0 -15px;
 }
 
@@ -3640,9 +3643,9 @@ img {
 
 .team-section .team-grids .grid {
   width: calc(25% - 30px);
-  float: left;
   margin: 0 15px 50px;
   text-align: center;
+  box-sizing: border-box;
 }
 
 @media (max-width: 991px) {
@@ -3660,7 +3663,7 @@ img {
 
 @media (max-width: 500px) {
   .team-section .team-grids .grid {
-    width: calc(100% - 15px);
+    width: 100%;
     float: none;
   }
 }
@@ -3685,7 +3688,6 @@ img {
   line-height: 35px;
   display: block;
   font-size: 13px;
-  font-size: 0.8125rem;
   color: #fff;
   border-radius: 3px;
 }
@@ -3703,17 +3705,9 @@ img {
   position: absolute;
   bottom: 0;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   opacity: 0;
   visibility: hidden;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  -ms-transition: all 0.5s;
   transition: all 0.5s;
 }
 
@@ -3729,7 +3723,6 @@ img {
 
 .team-section .team-grids h3 {
   font-size: 18px;
-  font-size: 1.125rem;
   font-weight: 500;
   margin: 0 0 0.1em;
 }
@@ -3737,15 +3730,20 @@ img {
 @media (max-width: 767px) {
   .team-section .team-grids h3 {
     font-size: 16px;
-    font-size: 1rem;
   }
 }
 
 .team-section .team-grids h3 + span {
   font-size: 13px;
-  font-size: 0.8125rem;
   color: #d35400;
   font-weight: 600;
+}
+
+.team-section .team-grids .img-holder img {
+  width: 120px; /* Adjust this to reduce image size */
+  height: 120px; /* Adjust this to reduce image size */
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 /*--------------------------------------------------------------
