--- a/templates/fsc/index.html
+++ b/templates/fsc/index.html
@@ -143,6 +143,7 @@
                       <a href="{% url 'blog' %}">Insight</a>
                   </li>
                   <li><a href="{% url 'contact' %}">Contact</a></li>
+                  <li><a href="{% url 'paema' %}">PAEMA</a></li>
               </ul>
           </div>
           <!-- end of nav-collapse -->
