--- a/templates/fsc/paema-index.html
+++ b/templates/fsc/paema-index.html
@@ -376,7 +376,7 @@
       <div class="col-md-4 mb-3">
         <h5>Contact</h5>
         <p>Email: info@fsc-paema.com</p>
-        <p>Phone: +123 456 7890</p>
+        <p>Phone: +250 788302214</p>
       </div>
       <div class="col-md-4 mb-3">
         <h5>Follow Us</h5>
